--- a/style.scss
+++ b/style.scss
@@ -1035,6 +1035,14 @@ header {
     flex-flow: column-reverse nowrap;
     justify-content: flex-start;
 
+    iframe {
+        width: 100%;
+
+        @media #{$bp-md} {
+            width: 600px;
+        }
+    }
+
     .location-info {
         padding-bottom: $padding / 2;
         flex-flow: column;
