--- a/style.scss
+++ b/style.scss
@@ -917,6 +917,10 @@ header {
             }
         }
 
+        h3 {
+            padding-bottom: 0;
+        }
+
         .intro,
         .list-title {
             padding: $padding / 3 0;
