--- a/style.css
+++ b/style.css
@@ -1648,4 +1648,15 @@ footer .footer-container .menu-item:after {
     padding-left: 15px;
   }
 }
+
+@media only screen and (min-width: 992px) {
+  .thank-you-message {
+    width: 100%;
+    max-width: 1180px;
+    margin: 0 auto;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
 /*# sourceMappingURL=style.css.map */
