--- a/style.css
+++ b/style.css
@@ -1477,14 +1477,7 @@ footer .footer-container {
 
 footer .footer-container img {
   max-width: 200px;
-  padding: 15px;
-  margin-bottom: 15px;
-}
-
-@media only screen and (min-width: 992px) {
-  footer .footer-container img {
-    margin-bottom: 0;
-  }
+  padding: 0 15px;
 }
 
 footer .footer-container .footer-menu-items {
@@ -1520,6 +1513,12 @@ footer .footer-container .menu-item:after {
   footer .footer-container .menu-item {
     margin: 0 15px;
   }
+}
+
+footer .footer-container .social-icon img,
+footer .footer-container .social-icon {
+  width: 80px;
+  height: 80px;
 }
 
 .for-who-wrapper {
